@@ -11,7 +11,7 @@
     <AssemblyName>ArtificialVCM</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AssemblyVersion>1.0.3.6485</AssemblyVersion>
+    <AssemblyVersion>1.0.4.6486</AssemblyVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -54,8 +54,8 @@
     <Compile Include="Configuration\ConfigurationParser.cs" />
     <Compile Include="Configuration\GoalStateConfiguration.cs" />
     <Compile Include="Configuration\InitialStateConfiguration.cs" />
-    <Compile Include="Output\AgentDetails.cs" />
-    <Compile Include="Output\AverageContribution.cs" />
+    <Compile Include="Output\AgentDetailsOutput.cs" />
+    <Compile Include="Output\AverageContributionOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AlgorithmVariables.cs" />
   </ItemGroup>
