@@ -1,11 +1,11 @@
 ﻿namespace ArtificialVCM.Output
 {
-    public class AverageContribution
+    public class AverageContributionOutput
     {
         public const string FileName = "Average_contribution.csv";
 
         public int Iteration { get; set; }
 
-        public double CommonPoolProfit { get; set; }
+        public double AverageContribution { get; set; }
     }
 }
